--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -25,10 +25,9 @@
                 android:id="@+id/layoutItem_addPlaylist"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:background="?attr/selectableItemBackground"
-                android:padding="8dp"
-                >
+                android:orientation="horizontal"
+                android:padding="8dp">
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cardView_thumbnail"
@@ -43,11 +42,13 @@
                         android:id="@+id/img_thumbnail"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
-                        android:background="@color/colorPlaylist_addPlaylist"
+                        app:tint="@color/blue1"
+                        android:background="@color/white"
 
                         android:contentDescription="@string/image_for_thumbnail"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/ic_round_playlist_add_24" />
+                        android:src="@drawable/ic_round_playlist_add_24"
+                        />
                 </androidx.cardview.widget.CardView>
 
                 <TextView
@@ -57,11 +58,57 @@
 
                     android:layout_gravity="center"
                     android:layout_marginStart="20dp"
-                    android:fontFamily="@font/poppins_thin"
+
                     android:text="@string/new_playlist"
 
                     android:textColor="@color/colorPlaylist_textColor"
-                    android:textSize="22sp"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/layoutItem_watchLater"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:orientation="horizontal"
+                android:padding="8dp">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardView_thumbWatchLater"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+
+                    app:cardCornerRadius="12dp"
+                    android:layout_marginStart="10dp"
+                    app:cardElevation="2dp">
+
+                    <ImageView
+                        android:id="@+id/img_thumbWatchLater"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:background="@color/white"
+                        android:layout_gravity="center"
+                        app:tint="@android:color/holo_green_light"
+
+                        android:contentDescription="@string/image_for_thumbnail"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_round_watch_later_24"
+                       />
+                </androidx.cardview.widget.CardView>
+
+                <TextView
+                    android:id="@+id/tv_favouriteWatchLater"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:text="@string/watch_later_list"
+
+                    android:layout_marginStart="20dp"
+                    android:layout_gravity="center"
+                    android:textColor="@color/colorPlaylist_textColor"
+                    android:textSize="24sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
