--- a/app/src/main/res/drawable/shape_bottom_music_player_border.xml
+++ b/app/src/main/res/drawable/shape_bottom_music_player_border.xml
@@ -3,6 +3,5 @@
     android:shape="rectangle">
     <gradient
         android:startColor="@color/blue1"
-        android:endColor="@color/light_blue_3"
-        android:angle="270"/>
+        android:endColor="@color/light_blue_3" />
 </shape>
