--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="blue1">#7CCEDC</color>
     <color name="blue2">#3AB0C5</color>
     <color name="bright_grey">#66AFAFAF</color>
+    <color name="light_blue_3">#0087AF</color>
 </resources>
