--- a/app/src/main/res/drawable/ic_music_note_cyan_24dp.xml
+++ b/app/src/main/res/drawable/ic_music_note_cyan_24dp.xml
@@ -1,10 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="31dp"
-    android:height="31dp"
+    android:width="24dp"
+    android:height="24dp"
     android:viewportWidth="31"
     android:viewportHeight="31">
   <path
       android:pathData="M15.5,17.5021V3.875H23.25V9.0417H18.0833V21.9583C18.0833,24.8129 15.7712,27.125 12.9167,27.125C10.0621,27.125 7.75,24.8129 7.75,21.9583C7.75,19.1037 10.0621,16.7917 12.9167,16.7917C13.8596,16.7917 14.7379,17.0629 15.5,17.5021ZM10.3333,21.9583C10.3333,23.3792 11.4958,24.5417 12.9167,24.5417C14.3375,24.5417 15.5,23.3792 15.5,21.9583C15.5,20.5375 14.3375,19.375 12.9167,19.375C11.4958,19.375 10.3333,20.5375 10.3333,21.9583Z"
-      android:fillColor="#3AB0C5"
+      android:fillColor="@color/cyan"
       android:fillType="evenOdd"/>
 </vector>
