--- a/app/src/main/res/drawable/shape_bottom_music_player_border.xml
+++ b/app/src/main/res/drawable/shape_bottom_music_player_border.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/blue1"
-        android:endColor="@color/light_blue_3" />
+        android:startColor="@color/light_cyan"
+        android:endColor="@color/dark_cyan" />
 </shape>
