--- a/app/src/main/res/drawable/shape_music_player_default_background.xml
+++ b/app/src/main/res/drawable/shape_music_player_default_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/blue1"
-        android:endColor="@color/light_blue_3"
+        android:startColor="@color/light_cyan"
+        android:endColor="@color/dark_cyan"
         android:angle="270"/>
 </shape>
