--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue1">#7CCEDC</color>
-    <color name="blue2">#3AB0C5</color>
+    <color name="light_cyan">#7CCEDC</color>
+    <color name="cyan">#3AB0C5</color>
     <color name="bright_grey">#66AFAFAF</color>
-    <color name="light_blue_3">#0087AF</color>
+    <color name="dark_cyan">#0087AF</color>
 </resources>
