--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,9 +9,9 @@
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <!-- Status bar. -->
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar">true</item>
 
         <!-- Activity transitions -->
         <item name="android:windowActivityTransitions">true</item>
@@ -26,6 +26,8 @@
     <style name="Theme.MediaPlayerApp.NoActionBar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Transparent status bar -->
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <!-- Gesture navigation bar -->
+        <item name="android:navigationBarColor">@android:color/transparent</item>
 
         <!-- Activity transitions -->
         <item name="android:windowActivityTransitions">true</item>
