rounded image view

--- a/app/src/main/res/layout/artist_list.xml
+++ b/app/src/main/res/layout/artist_list.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/artthum"
             android:layout_width="0dp"
             android:layout_height="140dp"
