--- a/app/src/main/res/layout/album_list.xml
+++ b/app/src/main/res/layout/album_list.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/albumimg"
             android:layout_width="match_parent"
             android:layout_height="140dp"
