--- a/app/src/main/res/layout/album_list2.xml
+++ b/app/src/main/res/layout/album_list2.xml
@@ -4,11 +4,11 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/albumimg"
         android:layout_width="60dp"
         android:layout_height="60dp"
-
+        app:shapeAppearanceOverlay="@style/rounded_corner_img"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
