--- a/app/src/main/res/layout/song_list_grid.xml
+++ b/app/src/main/res/layout/song_list_grid.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/songthumb"
             android:layout_width="match_parent"
             android:layout_height="140dp"
@@ -55,6 +55,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/songthumb"
             app:srcCompat="@drawable/ic_baseline_more_vert_24" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
