--- a/app/src/main/res/layout/fragment_songs.xml
+++ b/app/src/main/res/layout/fragment_songs.xml
@@ -6,7 +6,7 @@
     tools:context=".ui.music_library.SongsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/sr"
+        android:id="@+id/song_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="4dp" />
