--- a/app/src/main/res/layout/song_grid_item.xml
+++ b/app/src/main/res/layout/song_grid_item.xml
@@ -12,17 +12,18 @@
         android:layout_height="match_parent">
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/songthumb"
+            android:id="@+id/song_thumbnail"
             android:layout_width="match_parent"
             android:layout_height="140dp"
             android:background="#E9E9E9"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ImageContrastCheck" />
 
         <TextView
-            android:id="@+id/sogname"
+            android:id="@+id/song_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -30,12 +31,12 @@
             android:ellipsize="end"
             android:singleLine="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-            app:layout_constraintEnd_toStartOf="@+id/contextmenu"
+            app:layout_constraintEnd_toStartOf="@+id/context_menu_btn"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/songthumb" />
+            app:layout_constraintTop_toBottomOf="@+id/song_thumbnail" />
 
         <TextView
-            android:id="@+id/artistname"
+            android:id="@+id/song_artist"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -44,18 +45,20 @@
             android:singleLine="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/contextmenu"
+            app:layout_constraintEnd_toStartOf="@+id/context_menu_btn"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sogname" />
+            app:layout_constraintTop_toBottomOf="@+id/song_title" />
 
-        <ImageView
-            android:id="@+id/contextmenu"
+        <ImageButton
+            android:id="@+id/context_menu_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@null"
+            android:contentDescription="@string/open_song_item_context_menu"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/songthumb"
-            app:srcCompat="@drawable/ic_baseline_more_vert_24" />
+            app:layout_constraintTop_toBottomOf="@+id/song_thumbnail"
+            app:srcCompat="@drawable/ic_more_vert_control_normal_24dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
