--- a/app/src/main/res/layout/song_list_item.xml
+++ b/app/src/main/res/layout/song_list_item.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/songthumb"
+        android:id="@+id/song_thumbnail"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="8dp"
@@ -19,7 +19,7 @@
         app:shapeAppearanceOverlay="@style/rounded_corner_img"/>
 
     <TextView
-        android:id="@+id/sogname"
+        android:id="@+id/song_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -27,12 +27,12 @@
         android:ellipsize="end"
         android:singleLine="true"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/contextmenu"
-        app:layout_constraintStart_toEndOf="@+id/songthumb"
+        app:layout_constraintEnd_toStartOf="@+id/context_menu_btn"
+        app:layout_constraintStart_toEndOf="@+id/song_thumbnail"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/artistname"
+        android:id="@+id/song_artist"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -40,20 +40,22 @@
         android:ellipsize="end"
         android:singleLine="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/contextmenu"
+        app:layout_constraintEnd_toStartOf="@+id/context_menu_btn"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/songthumb"
-        app:layout_constraintTop_toBottomOf="@+id/sogname"
+        app:layout_constraintStart_toEndOf="@+id/song_thumbnail"
+        app:layout_constraintTop_toBottomOf="@+id/song_title"
         app:layout_constraintVertical_bias="0.529" />
 
-    <ImageView
-        android:id="@+id/contextmenu"
+    <ImageButton
+        android:id="@+id/context_menu_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_baseline_more_vert_24" />
+        app:srcCompat="@drawable/ic_more_vert_control_normal_24dp"
+        android:contentDescription="@string/open_song_item_context_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
