--- a/app/src/main/res/menu/music_library_options_menu.xml
+++ b/app/src/main/res/menu/music_library_options_menu.xml
@@ -4,13 +4,13 @@
     <item
         android:id="@+id/search"
         android:title="@string/action_search"
-        android:icon="@android:drawable/ic_menu_search"
+        android:icon="@drawable/ic_search_white_24dp"
         app:showAsAction="always"
-        app:actionViewClass="android.widget.SearchView"
-        />
+        app:actionViewClass="android.widget.SearchView" />
+
     <item
-        android:id="@+id/switch_view"
-        android:icon="@android:drawable/ic_menu_today"
+        android:id="@+id/change_display_mode"
+        android:icon="@drawable/ic_gridview_white_24dp"
         android:title=""
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 </menu>
