--- a/app/src/main/res/layout/fragment_album_detail.xml
+++ b/app/src/main/res/layout/fragment_album_detail.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.music_library.AlbumDetailFragment">
+    tools:context=".ui.music_library.album_tab.AlbumDetailFragment">
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
         style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
