--- a/app/src/main/res/drawable/ic_arrow_down_24dp.xml
+++ b/app/src/main/res/drawable/ic_arrow_down_24dp.xml
@@ -1,5 +1,5 @@
 <vector android:height="24dp" android:tint="?colorControlNormal"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/black" android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM10,16.5v-9l6,4.5 -6,4.5z"/>
+    <path android:fillColor="@color/black" android:pathData="M7.41,8.59L12,13.17l4.59,-4.58L18,10l-6,6 -6,-6 1.41,-1.41z"/>
 </vector>
