--- a/app/src/main/res/drawable/ic_repeat_btn.xml
+++ b/app/src/main/res/drawable/ic_repeat_btn.xml
@@ -4,9 +4,9 @@
         android:drawable="@drawable/ic_repeat_translucent_24dp"
         android:maxLevel="0" />
     <item
-        android:drawable="@drawable/ic_repeat_white_24dp"
+        android:drawable="@drawable/ic_repeat_24dp"
         android:maxLevel="1" />
     <item
-        android:drawable="@drawable/ic_repeat_one_white_24dp"
+        android:drawable="@drawable/ic_repeat_one_24dp"
         android:maxLevel="2" />
 </level-list>
