--- a/app/src/main/res/layout/bottom_music_player.xml
+++ b/app/src/main/res/layout/bottom_music_player.xml
@@ -29,21 +29,20 @@
 
     <ImageButton
         android:id="@+id/bottom_music_player_play_pause_btn"
-        style="@style/MusicControlBtn"
+        style="@style/BottomPlayerMusicControlBtn"
         android:layout_width="@dimen/bottom_music_player_btn_size"
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
-        android:background="@null"
         android:contentDescription="@string/play_pause_btn"
         app:layout_constraintBottom_toBottomOf="@+id/bottom_music_player_skip_next_btn"
         app:layout_constraintEnd_toStartOf="@+id/bottom_music_player_skip_next_btn"
         app:layout_constraintTop_toTopOf="@+id/bottom_music_player_skip_next_btn"
-        app:srcCompat="@drawable/play_pause_button_dark"
+        app:srcCompat="@drawable/ic_play_pause_btn"
         tools:ignore="TouchTargetSizeCheck" />
 
     <ImageButton
         android:id="@+id/bottom_music_player_skip_next_btn"
-        style="@style/MusicControlBtn"
+        style="@style/BottomPlayerMusicControlBtn"
         android:layout_width="@dimen/bottom_music_player_btn_size"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -53,12 +52,12 @@
         app:layout_constraintEnd_toStartOf="@+id/bottom_music_player_stop_btn"
         app:layout_constraintTop_toTopOf="@+id/bottom_music_player_stop_btn"
         app:layout_constraintVertical_bias="0.52"
-        app:srcCompat="@drawable/ic_skip_next_dark_24dp"
+        app:srcCompat="@drawable/ic_skip_next_24dp"
         tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
 
     <ImageButton
         android:id="@+id/bottom_music_player_stop_btn"
-        style="@style/MusicControlBtn"
+        style="@style/BottomPlayerMusicControlBtn"
         android:layout_width="30dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -68,12 +67,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintVertical_bias="0.52"
-        app:srcCompat="@drawable/ic_cancel_thin_gray_24dp"
+        app:srcCompat="@drawable/ic_cancel_24dp"
         tools:ignore="TouchTargetSizeCheck" />
 
     <ImageButton
         android:id="@+id/bottom_music_player_skip_prev_btn"
-        style="@style/MusicControlBtn"
+        style="@style/BottomPlayerMusicControlBtn"
         android:layout_width="@dimen/bottom_music_player_btn_size"
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
@@ -82,7 +81,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/bottom_music_player_skip_next_btn"
         app:layout_constraintEnd_toStartOf="@+id/bottom_music_player_play_pause_btn"
         app:layout_constraintTop_toTopOf="@+id/bottom_music_player_skip_next_btn"
-        app:srcCompat="@drawable/ic_skip_prev_dark_24dp"
+        app:srcCompat="@drawable/ic_skip_prev_24dp"
         tools:ignore="TouchTargetSizeCheck" />
 
     <com.google.android.material.imageview.ShapeableImageView
