--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,12 +2,17 @@
 <resources>
     <style name="MusicControlBtn">
         <item name="android:background">@null</item>
+        <item name="android:tint">@color/white</item>
         <item name="android:scaleType">fitCenter</item>
         <item name="android:adjustViewBounds">true</item>
         <item name="android:paddingStart">3dp</item>
         <item name="android:paddingEnd">3dp</item>
         <item name="android:paddingTop">3dp</item>
         <item name="android:paddingBottom">3dp</item>
+    </style>
+
+    <style name="BottomPlayerMusicControlBtn" parent="MusicControlBtn">
+        <item name="android:tint">@null</item>
     </style>
 
     <style name="ImageViewRoundedCorner">
