--- a/app/src/main/res/layout/fragment_artist_detail.xml
+++ b/app/src/main/res/layout/fragment_artist_detail.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/artistcollapsinglayout"
+            android:id="@+id/artist_details_collapsing_layout"
             android:layout_width="match_parent"
             android:layout_height="370dp"
             android:theme="@style/Theme.AppCompat"
@@ -26,20 +26,17 @@
             app:statusBarScrim="@android:color/transparent">
 
             <ImageView
-                android:id="@+id/bigartist"
+                android:id="@+id/artist_details_artwork"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:contentDescription="TODO"
+                android:contentDescription="@string/artist_artwork"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
 
                 android:transitionName="transition_album_art"
-                app:layout_collapseMode="parallax" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#22000000" />
+                app:layout_collapseMode="parallax"
+                app:srcCompat="@drawable/default_artist_artwork"
+                tools:ignore="ImageContrastCheck" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
@@ -64,20 +61,21 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
-                    android:id="@+id/artistimg"
+                    android:id="@+id/artist_details_small_artwork"
                     android:layout_width="55dp"
                     android:layout_height="55dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginLeft="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="2dp"
                     android:background="#E9E9E9"
+                    android:contentDescription="@string/small_artist_artwork"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/default_artist_artwork" />
 
                 <TextView
-                    android:id="@+id/artistnaam"
+                    android:id="@+id/artist_details_name"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
@@ -85,46 +83,46 @@
                     android:layout_marginEnd="60dp"
                     android:ellipsize="end"
                     android:singleLine="true"
+                    android:text="@string/default_artist_name"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/artistimg"
+                    app:layout_constraintStart_toEndOf="@+id/artist_details_small_artwork"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/artistDetails"
+                    android:id="@+id/artist_details_description"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginLeft="8dp"
                     android:layout_marginTop="2dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
                     android:layout_marginBottom="2dp"
                     android:ellipsize="end"
                     android:singleLine="true"
+                    android:text="@string/default_artist_details_description"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/artistimg"
-                    app:layout_constraintTop_toBottomOf="@+id/artistnaam" />
+                    app:layout_constraintStart_toEndOf="@+id/artist_details_small_artwork"
+                    app:layout_constraintTop_toBottomOf="@+id/artist_details_name" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler"
+                android:id="@+id/artist_details_song_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
-
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/play_all_songs_from_this_artist"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|right|end"
-        />
+        tools:ignore="ImageContrastCheck" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
