--- a/app/src/main/res/layout/fragment_music_library.xml
+++ b/app/src/main/res/layout/fragment_music_library.xml
@@ -1,32 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:fitsSystemWindows="false"
-    android:id="@+id/song_container"
     tools:context=".ui.music_library.MusicLibraryFragment">
-
-    <LinearLayout
-        android:id="@+id/music_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" />
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tablayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-       />
 
     <androidx.viewpager.widget.ViewPager
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:id="@+id/viewpager"
+        android:layout_height="match_parent"
+        android:id="@+id/music_library_viewpager"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/music_library_tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
     </androidx.viewpager.widget.ViewPager>
 
-</LinearLayout>
+</FrameLayout>
