--- a/app/src/main/res/layout/song_grid_item.xml
+++ b/app/src/main/res/layout/song_grid_item.xml
@@ -15,11 +15,11 @@
             android:id="@+id/song_thumbnail"
             android:layout_width="match_parent"
             android:layout_height="140dp"
-            android:background="#E9E9E9"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/default_song_artwork"
             tools:ignore="ImageContrastCheck" />
 
         <TextView
@@ -30,6 +30,7 @@
             android:layout_marginTop="8dp"
             android:ellipsize="end"
             android:singleLine="true"
+            android:text="@string/default_song_name"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
             app:layout_constraintEnd_toStartOf="@+id/context_menu_btn"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,6 +44,7 @@
             android:layout_marginBottom="8dp"
             android:ellipsize="end"
             android:singleLine="true"
+            android:text="@string/default_artist_name"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/context_menu_btn"
