Fix bottom player's upper border not displayed issue

--- a/app/src/main/res/layout/bottom_music_player.xml
+++ b/app/src/main/res/layout/bottom_music_player.xml
@@ -7,7 +7,19 @@
     android:layout_height="@dimen/bottom_music_player_height" >
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/bottom_music_player_song_artwork_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:contentDescription="@string/music_artwork_background"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bottom_music_player_upper_border" />
+
+    <ImageView
+        android:id="@+id/bottom_music_player_upper_border"
         android:layout_width="match_parent"
         android:layout_height="3dp"
         android:src="@drawable/shape_bottom_music_player_border"
@@ -15,17 +27,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription" />
-
-    <ImageView
-        android:id="@+id/bottom_music_player_song_artwork_background"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="@string/music_artwork_background"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/bottom_music_player_play_pause_btn"
@@ -65,7 +66,7 @@
         android:contentDescription="@string/skip_next_btn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/bottom_music_player_upper_border"
         app:layout_constraintVertical_bias="0.52"
         app:srcCompat="@drawable/ic_cancel_24dp"
         tools:ignore="TouchTargetSizeCheck" />
@@ -93,7 +94,7 @@
         android:transitionName="song_artwork"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/bottom_music_player_upper_border"
         app:shapeAppearanceOverlay="@style/ImageViewRoundedCorner"
         app:srcCompat="@drawable/default_song_artwork" />
 
@@ -111,7 +112,7 @@
         app:layout_constraintEnd_toStartOf="@+id/bottom_music_player_skip_prev_btn"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/bottom_music_player_song_artwork"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/bottom_music_player_upper_border" />
 
     <TextView
         android:id="@+id/bottom_music_player_song_artist"
