--- a/app/src/main/res/layout/item_video_library_grid.xml
+++ b/app/src/main/res/layout/item_video_library_grid.xml
@@ -29,7 +29,7 @@
                 android:layout_centerInParent="true"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_video"
+                android:src="@drawable/ic_video_24dp"
                 app:shapeAppearanceOverlay="@style/roundedCornerImageView" />
 
             <ImageView
