Slightly modify app colors

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,10 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="light_cyan">#C9E5EA</color>
-    <color name="cyan">#3AB0C5</color>
+    <color name="light_cyan">#7BDAEB</color>
+    <color name="cyan">#44C9E1</color>
+    <color name="dark_cyan">#29829C</color>
     <color name="bright_grey">#66AFAFAF</color>
-    <color name="dark_cyan">#0087AF</color>
     <color name="colorPlaylist_background">#FFFFFF</color>
     <color name="colorPlaylist_addPlaylist">#7CCEDC</color>
     <color name="colorPlaylist_textColor">#474646</color>
