--- a/app/src/main/res/layout/fragment_album_detail.xml
+++ b/app/src/main/res/layout/fragment_album_detail.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.music_library.album_tab.AlbumDetailFragment">
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/app_bar"
+        android:id="@+id/album_details_appbar"
         style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,6 +33,7 @@
                 android:scaleType="centerCrop"
                 android:transitionName="transition_album_art"
                 app:layout_collapseMode="parallax"
+                android:src="@drawable/default_album_artwork"
                 tools:ignore="ImageContrastCheck" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
@@ -63,7 +64,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="2dp"
-                    android:background="#E9E9E9"
+                    android:src="@drawable/default_album_artwork"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -111,14 +112,15 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/play_all_songs_from_album_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
         android:contentDescription="@string/play_all_songs_from_this_album"
-        android:src="@android:drawable/ic_media_play"
-        app:layout_anchor="@id/app_bar"
+        app:tint="@color/white"
+        android:src="@drawable/ic_play_arrow_24dp"
+        app:layout_anchor="@id/album_details_appbar"
         app:layout_anchorGravity="bottom|right|end"
         tools:ignore="ImageContrastCheck" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
